Add test for CHECK exit code behavior.

BUG=687326
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2697423002
Cr-Commit-Position: refs/heads/master@{#452197}

Former-commit-id: c0f16eacc2e54b2a6c0c3a4f6f2766f59d582827